Adjust layout of the first scenario

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -276,7 +276,7 @@ Here, I give you the Ring of Vitality!''
 
 If you haven't secured all mines in all the grass Tiles, bandits have attacked your supply lines and taken valuable resources.
 
-\textcolor{darkcandyapplered}{Lose:} 5 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}.
+\textcolor{darkcandyapplered}{Lose: 5 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}.}
 
 \vspace*{\fill}
 \includegraphics[width=\linewidth, keepaspectratio]{\art/dwarf.jpg}
