--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -103,51 +103,27 @@ You lose if any of the following occur:
 
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item Read: ``To pass this trial, you must defeat everyone in the land by whatever means necessary.
-    Good luck, cadet.
-    May the Light shine down upon you.''
+  \item Read: ``Exercise starts'' section.
   \end{itemize}
 
-\textbf{Combat with a Pack of Medusas:}
+\textbf{Discovering the Tile with Medusas:}
 \begin{itemize}
-  \item Read: ``The dark and foreboding trail is ominously quiet.
-    Suddenly you hear the hissing of hundreds of snakes.
-    Before you even get a chance to turn back, more than two dozen Medusae slither out and attack.''
+  \item Read: ``A quiet trail'' section.
 \end{itemize}
 
 \textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Forest Guard rangers must deal with a wide variety of unexpected and troublesome situations.
-    There will come times when things will not go as planned.
-    This is one of those times.
-    Several of your supply trains have been hit by raiders and their contents looted.
-    Lose: 3~\svg{gold}, 1~\svg{building_materials}, 1~\svg{valuables}.
-    Deal with this situation.
-  \item The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} until the end of the Scenario (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).  % no-check-caps
+  \item Read: ``The raiders'' section.
 \end{itemize}
 
 \textbf{Entering the Field with Pandora's Box:}
 \begin{itemize}
-  \item Read: ``You receive an eerie feeling from the box before you.
-    A glow pulsates around it and an odd colored fog issues forth from its cracks.''
+  \item Read: ``Pandora's Box'' section.
 \end{itemize}
 
-\textbf{\nth{9} Round:}
+\textbf{\mbox{\nth{9} and all the following Resource Rounds:}}
 \begin{itemize}
- \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-   Lose 10 \svg{gold} from this Round's income.
-\end{itemize}
-
-\textbf{\nth{11} Round:}
-\begin{itemize}
-  \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-    Lose 20 \svg{gold} from this Round's income.
-\end{itemize}
-
-\textbf{\nth{13} Round:}
-\begin{itemize}
-  \item If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
-    Lose 30 \svg{gold} from this Round's income.
+  \item Read ``Continued raids'' section.
 \end{itemize}
 
 \textbf{When you complete the Scenario:}
@@ -155,6 +131,7 @@ You lose if any of the following occur:
   \item Read: ``Congratulations! You have passed the Trial! Victory is yours!''
 \end{itemize}
 
+\columnbreak
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
@@ -173,42 +150,35 @@ During this Scenario:
     \item \textbf{The Obelisks at N3 and N5 are Two-Way Monoliths.}
       Entering one of these Fields transports your Hero to the other Field. \textbf{The Obelisks function only if both Necropolis and Inferno Faction Towns have been captured.}
     \item \textbf{Inferno Town contains a one-way Castle Gate} that will allow the Player to transport themselves to the Obelisk at N3. It works only if the N3 Obelisk was flagged.
-\end{itemize}
-
-\subsection*{\MakeUppercase{Special Combat\\Conditions}}
-
-\begin{itemize}
-  \item \textbf{Pack of Medusas:} This Combat requires no additional \svgeven{movement}.
-    Medusas remain in this spot on the Far Map Tile even if the Map Tile is rotated after discovery.
-    If a Neutral army is also present on this Map Tile, it must be battled separately after the Medusas are defeated.
-  \item \textbf{Pandora's Box:} If you enter a Field with a Pandora's Box, start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
-    In addition to the Field reward, gain 1 \svg{valuables}.
   \item \textbf{Necropolis and Inferno Towns:} The Necropolis and Inferno Towns (on S1 and S6) MUST be attacked and captured in the same Round.
     The Round is determined by when either Map Tile S1 or S6 is entered.
     If this coordinated attack fails, Gelu will lose his cover, and all Enemy Towns will call for immediate reinforcements.
     Gelu is then defeated.
 \end{itemize}
 
-\includegraphics[width=\linewidth]{\art/dendroid.jpg}
-
 \end{multicols*}
 
-\begin{tikzpicture}[remember picture, overlay]
-  \node(map)[anchor=center] at (9, -4.5) {
-    \includegraphics[width=\textwidth]{\maps/rampart_graduation_exercise.png}
-  };
-  \node at (1.3,-1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
-  \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Pack of}}}}};
-  \node at (3.3,0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
-  \node at (15.6, -1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
-  \node at (3.5, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
-  \node at (15.6, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
-  \node at (5.9, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S1}}}}};
-  \node at (14.5, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S2}}}}};
-  \node at (11.9, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S6}}}}};
-\end{tikzpicture}
+\begin{minipage}{\textwidth}
+  \vspace{-3em}
+  \begin{tikzpicture}[remember picture]
+    \node(map)[anchor=center] at (9, -4.5) {
+      \includegraphics[width=\textwidth]{\maps/rampart_graduation_exercise.png}
+    };
+    \node at (1.3,-1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
+    \node at (3.3,0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Pack of}}}}};
+    \node at (3.3,0) {\large{{\textbf{\textcolor{darkcandyapplered}{Medusas}}}}};
+    \node at (15.6, -1.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
+    \node at (3.5, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
+    \node at (15.6, -5.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N5}}}}};
+    \node at (5.9, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S1}}}}};
+    \node at (14.5, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S2}}}}};
+    \node at (11.9, -9.7) {\large{{\textbf{\textcolor{darkcandyapplered}{S6}}}}};
+  \end{tikzpicture}
+\end{minipage}
 
-\begin{table*}[!b]
+\vspace*{\fill}
+
+\begin{table*}[!hb]
   \hypertarget{Elixir of Life AI}{}
   \hommtable[]{24}{
     \centering
@@ -232,3 +202,72 @@ During this Scenario:
     \end{tabularx}
   }
 \end{table*}
+
+\vspace*{-1.5em}
+
+\pagebreak
+
+\begin{multicols*}{2}
+
+\subsection*{\MakeUppercase{The Story}}
+
+\textbf{Exercise starts}
+
+To pass this trial, you must defeat everyone in the land by whatever means necessary.
+Good luck, cadet.
+May the Light shine down upon you.
+
+\textbf{A quiet trail}
+
+The dark and foreboding trail is ominously quiet.
+Suddenly you hear the hissing of hundreds of snakes.
+Before you even get a chance to turn back, more than two dozen Medusae slither out and attack.
+
+\textcolor{darkcandyapplered}{
+\begin{itemize}
+    \item Medusas remain in their spot on the Far Map Tile regardless of how the Map Tile is rotated after discovery.
+    \item Combat with a Pack of Medusas requires no additional \svgeven{movement-red}.
+    \item If a Neutral army is also present on this Map Tile, it must be battled separately after the Medusas are defeated.
+\end{itemize}
+}
+
+\textbf{The raiders}
+
+Forest Guard rangers must deal with a wide variety of unexpected and troublesome situations.
+There will come times when things will not go as planned.
+This is one of those times.
+Several of your supply trains have been hit by raiders and their contents looted.
+Deal with this situation.
+\begin{itemize}
+  \item \textcolor{darkcandyapplered}{Lose: 3~\svg{gold}, 1~\svg{building_materials}, 1~\svg{valuables}.}
+  \item \textcolor{darkcandyapplered}{The difficulty level of every Combat encounter on all \textbf{Far Map Tiles increases by one} until the end of the Scenario} (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).  % no-check-caps
+\end{itemize}
+
+\textbf{Pandora's Box}
+
+You receive an eerie feeling from the box before you.
+A glow pulsates around it and an odd colored fog issues forth from its cracks.
+\textcolor{darkcandyapplered}{
+\begin{itemize}
+    \item Start Combat with a Pack of Efreet and a Pack of Genies instead of the standard Neutral army.
+    \item In addition to the Field reward, gain 1 \svg{valuables}.
+\end{itemize}
+}
+
+\textbf{Continued raids}
+
+If the Necropolis and Inferno Faction Towns have not been captured yet, raiders continue to disrupt your supply lines.
+
+\textcolor{darkcandyapplered}{
+Depending on the Round, lose from its income:
+\begin{itemize}
+  \item \textbf{\nth{9}}: 10 \svg{gold}
+  \item \textbf{\nth{11}}: 20 \svg{gold}
+  \item \textbf{\nth{13}}: 30 \svg{gold}
+\end{itemize}
+}
+
+\vspace*{\fill}
+\includegraphics[width=\linewidth, keepaspectratio]{\art/unicorn.jpg}
+
+\end{multicols*}
