Adjust some caps

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -266,15 +266,15 @@ Move with haste, there is little time.''
 
 \textbf{The Man in the Southwest}
 
-If you do not have the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''
+If you do not have the Angel Wings (in your hand or deck) and enter this Field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''  % no-check-caps
 
-If you are in possession of the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``Ahhhhh, I see Feredor sent you.
+If you are in possession of the Angel Wings (in your hand or deck) and enter this Field, the Man in the Southwest says: ``Ahhhhh, I see Feredor sent you.  % no-check-caps
 You are worthy.
 Here, I give you the Ring of Vitality!''
 
 \textbf{Bandits}
 
-If you haven't secured all mines in all the grass Tiles, bandits have attacked your supply lines and taken valuable resources.
+If you haven't secured all mines in all the Grass Map Tiles, bandits have attacked your supply lines and taken valuable resources.
 
 \textcolor{darkcandyapplered}{Lose: 5 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}.}
 
