Restore draft scenarios

--- a/draft-scenarios/campaigns/rampart_cutthroats.tex
+++ b/draft-scenarios/campaigns/rampart_cutthroats.tex
@@ -266,9 +266,9 @@ Move with haste, there is little time.''
 
 \textbf{The Man in the Southwest}
 
-If you do not have the Angel Wings (in your hand or deck) and enter this Field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''  % no-check-caps
+If you do not have the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``You are a fool! You are not worthy! Be gone!''
 
-If you are in possession of the Angel Wings (in your hand or deck) and enter this Field, the Man in the Southwest says: ``Ahhhhh, I see Feredor sent you.  % no-check-caps
+If you are in possession of the Angel Wings (in your hand or Deck) and enter this Field, the Man in the Southwest says: ``Ahhhhh, I see Feredor sent you.
 You are worthy.
 Here, I give you the Ring of Vitality!''
 
