--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -477,14 +477,14 @@
 
 \clearpage
 
-% \include{coops/main.tex}
+\include{coops/main.tex}
 
-% \include{clash/main.tex}
+\include{clash/main.tex}
 
 \include{campaigns/main.tex}
 
 \include{sections/coop_campaign_rules.tex}
 
-% \include{sections/back_cover.tex}
+\include{sections/back_cover.tex}
 
 \end{document}
