Rampart Campaign: Elixir of Life (#176)

--- a/draft-scenarios/campaigns/main.tex
+++ b/draft-scenarios/campaigns/main.tex
@@ -1,3 +1,9 @@
 \addscenariogroup{Campaigns}{\layout/campaigns.png}
 
 \clearpage
+
+\input{campaigns/rampart_graduation_exercise.tex}
+
+\clearpage
+
+\input{campaigns/rampart_cutthroats.tex}
