[PL] Translate Stand United

--- a/coops/main.tex
+++ b/coops/main.tex
@@ -14,8 +14,8 @@
 
 \clearpage
 
-\input{coops/close_to_enemies.tex}
+\input{\coopspath/close_to_enemies.tex}
 
 \clearpage
 
-\input{coops/stand_united.tex}
+\input{\coopspath/stand_united.tex}
